WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199734
ASSERTION FAILED: RunLoop::isMain() under IPC::Connection::sendWithAsyncReply()
https://bugs.webkit.org/show_bug.cgi?id=199734
Summary
ASSERTION FAILED: RunLoop::isMain() under IPC::Connection::sendWithAsyncReply()
Chris Dumez
Reported
2019-07-11 16:20:26 PDT
ASSERTION FAILED: RunLoop::isMain() under IPC::Connection::sendWithAsyncReply(): Source/WebKit/Platform/IPC/Connection.cpp(1131) : uint64_t IPC::nextAsyncReplyHandlerID() 1 0x10ee1df8c WTFCrash 2 0x1029fecd0 WTF::DumbPtrTraits<WTF::StringImpl>::unwrap(WTF::StringImpl* const&) 3 0x102a7d1b4 IPC::nextAsyncReplyHandlerID() 4 0x103a18454 void IPC::Connection::sendWithAsyncReply<Messages::WebProcessProxy::ProcessWasUnexpectedlyUnsuspended, WebKit::WebProcess::processTaskStateDidChange(WebKit::ProcessTaskStateObserver::TaskState)::$_12>(Messages::WebProcessProxy::ProcessWasUnexpectedlyUnsuspended&&, WebKit::WebProcess::processTaskStateDidChange(WebKit::ProcessTaskStateObserver::TaskState)::$_12&&, unsigned long long) 5 0x103a18248 WebKit::WebProcess::processTaskStateDidChange(WebKit::ProcessTaskStateObserver::TaskState) 6 0x102c791e4 WebKit::ProcessTaskStateObserver::setTaskState(WebKit::ProcessTaskStateObserver::TaskState) 7 0x102c79404 WebKit::ProcessTaskStateObserver::ProcessTaskStateObserver()::$_0::operator()(BKSProcessTaskState) const 8 0x102c793b8 invocation function for block in WebKit::ProcessTaskStateObserver::ProcessTaskStateObserver()::$_0::operator void (BKSProcessTaskState) block_pointer() const 9 0x102c78acc -[WKProcessTaskStateObserverDelegate process:taskStateDidChange:] 10 0x19e498d78 <redacted> 11 0x19c93c038 <redacted> 12 0x19c951560 <redacted> 13 0x199ada8cc <redacted> 14 0x199b281cc <redacted> 15 0x199ad4514 <redacted> 16 0x199ad4f38 <redacted> 17 0x199ad608c <redacted> 18 0x199ade3f0 <redacted> 19 0x199b7ae2c <redacted> 20 0x199b77f38 <redacted> 21 0x199b7a9f4 start_wqthread
Attachments
Patch
(1.82 KB, patch)
2019-07-11 16:26 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-07-11 16:20:40 PDT
<
rdar://problem/52977439
>
Chris Dumez
Comment 2
2019-07-11 16:26:53 PDT
Created
attachment 373975
[details]
Patch
Geoffrey Garen
Comment 3
2019-07-11 16:33:27 PDT
Comment on
attachment 373975
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-07-11 16:58:41 PDT
Comment on
attachment 373975
[details]
Patch Clearing flags on attachment: 373975 Committed
r247375
: <
https://trac.webkit.org/changeset/247375
>
WebKit Commit Bot
Comment 5
2019-07-11 16:58:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug