ASSERTION FAILED: RunLoop::isMain() under IPC::Connection::sendWithAsyncReply() https://bugs.webkit.org/show_bug.cgi?id=199734 <rdar://problem/52977439>

Reviewed by Geoffrey Garen.

It appears WKProcessTaskStateObserverDelegate's taskStateDidChange handler can get called
on a background thread so we need to make sure we go back to the main thread before we
go into WebKit and do IPC.

* Shared/Cocoa/ProcessTaskStateObserver.mm:
(-[WKProcessTaskStateObserverDelegate process:taskStateDidChange:]):


Canonical link: https://commits.webkit.org/213610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247375 268f45cc-cd09-0410-ab3c-d52691b4dbfc